resources/edge/edge_deployment_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: edge-app
  template:
    metadata:
      labels:
        app: edge-app
    
    spec:
      containers:
        - name: edge-app-container
          image: yxos/edge
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
      nodeSelector:
          PoP: space_1
