resources/edge/edge_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-app-service
spec:
  selector:
    app: edge-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
